[package]
name = "termiontelnet"
version = "0.1.0"
authors = ["Ellie Frost <web@stillinbeta.com>"]
edition = "2018"

[dependencies]
tokio-codec = "0.1.1"
tokio = "0.1.18"
futures = "0.1"
bytes = "0.4.12"
termion = { git = "https://github.com/stillinbeta/termion.git", rev = "c13e858d3f4a1eef1317f10c8ed0237c61f38018" }
num-traits = "0.2"
num-derive = "0.2"

[dev-dependencies]
tokio-mockstream = "1.0"